--- a/index.html
+++ b/index.html
@@ -11,3 +11,6 @@
     <!-- built files will be auto injected -->
   </body>
 </html>
+
+<script src="//cdn.jsdelivr.net/npm/eruda"></script>
+<script>eruda.init();</script>
