--- a/index.html
+++ b/index.html
@@ -12,5 +12,5 @@
   </body>
 </html>
 
-<script src="//cdn.jsdelivr.net/npm/eruda"></script>
-<script>eruda.init();</script>
+<!-- <script src="//cdn.jsdelivr.net/npm/eruda"></script>
+<script>eruda.init();</script> -->
